--- a/android/Healthcare/app/src/main/res/layout/activity_main.xml
+++ b/android/Healthcare/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,12 @@
     <ImageView
         android:id="@+id/iv_result"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="300dp" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </LinearLayout>
